--- a/1.html
+++ b/1.html
@@ -4,7 +4,7 @@
      <h1> THIS IS GITHUB</h1>
      </head>
 <body>
-     <h1>HI</h1>
+     <h1>hHii Siva</h1>
  <p> this is paragraph</p>
     </body>
 </html>
